@@ -115,6 +115,10 @@ Other Changes
 
   Closes #6372
 
+* ``implicit-str-concat`` will now be raised on calls like ``open("myfile.txt" "a+b")`` too.
+
+  Closes #6441
+
 * Fix a failure to respect inline disables for ``fixme`` occurring on the last line
   of a module when pylint is launched with ``--enable=fixme``.
 
