@@ -2,4 +2,7 @@ implicit-str-concat:4:0:None:None::Implicit string concatenation found in list:U
 implicit-str-concat:6:0:None:None::Implicit string concatenation found in tuple:UNDEFINED
 implicit-str-concat:8:0:None:None::Implicit string concatenation found in set:UNDEFINED
 implicit-str-concat:11:0:None:None::Implicit string concatenation found in list:UNDEFINED
+implicit-str-concat:13:0:None:None::Implicit string concatenation found in call:UNDEFINED
+implicit-str-concat:14:0:None:None::Implicit string concatenation found in call:UNDEFINED
 implicit-str-concat:27:0:None:None::Implicit string concatenation found in assignment:UNDEFINED
+implicit-str-concat:40:0:None:None::Implicit string concatenation found in call:UNDEFINED
